--- a/style.css
+++ b/style.css
@@ -2,28 +2,89 @@
 
 *{
     margin: 0;
-    padding: 0
+    padding: 0;
+    box-sizing: border-box;
 }
+
 html {
   font-family: 'Poppins', sans-serif;
 }
+
 body {
   background-color: #010937;
   color: #fff;
 }
+
+.menu {
+  width: fit-content;
+  margin: 250px auto;
+}
+
+.menu h1 {
+  font-size: 36px;
+  border: 4px solid #fff;
+  border-radius: 15px 15px 15px 0;
+  padding: 6px;
+}
+
+.selector {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.selector button {
+  color: #fff;
+  font-size: 24px;
+  padding: 4px;
+  background-color: #101f78;
+  border: 4px solid #1c31a5;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.selector button:hover {
+  border: 4px solid orange;
+  margin-top: -1px;
+}
+
+/* section started */
+
+.started {
+  display: none;
+}
+
+.score {
+  position: absolute;
+  right: 1%;
+  top: 1%;
+}
+
 .container {
   width:fit-content;
   margin: 100px  auto; 
 }
-.container h2 {
-  text-align: center;
+
+.imageContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
 }
+
 .question {
   max-width: 430px;
   border: 4px solid #fff;
   border-radius: 20px 20px 20px 0;
-  padding: 2px;
+  padding: 4px;
 }
+
+.question h2 {
+  text-align: center;
+}
+
 .answers {
   margin: 20px 10px;
   display: grid;
@@ -31,7 +92,8 @@ body {
   justify-items: center;
   gap: 15px;
 }
-label { 
+
+.answers label { 
   cursor: pointer;
     background-color:#101f78;
     display:block;
@@ -39,9 +101,17 @@ label {
     padding: 4px;
     border: 3px solid #1c31a5;
     border-radius: 10px;
-    box-sizing: border-box;
 }
-label p {
+
+.answers input {
+  display:none;
+}
+
+.answers input:hover + label, .answers input:checked + label {
+  border: 3px solid orange;
+}
+
+.answers label p {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,23 +121,9 @@ label p {
   font-size: 14px;
   overflow:hidden;
 }
-input {
-  display:none;
-}
-input:hover + label, input:checked + label {
-  border: 3px solid orange;
-}
-.m {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 20px;
-}
+
 .heart {
   font-size: 32px;
 }
-.score {
-  position: absolute;
-  right: 1%;
-  top: 1%;
-}
+
+/* section started end */
