--- a/style.css
+++ b/style.css
@@ -43,11 +43,11 @@ body {
   border: 4px solid #1c31a5;
   border-radius: 10px;
   cursor: pointer;
+  margin-bottom: 10px;
 }
 
 .selector button:hover {
   border: 4px solid orange;
-  margin-top: -1px;
 }
 
 /* section started */
@@ -64,7 +64,7 @@ body {
 
 .container {
   width:fit-content;
-  margin: 100px  auto; 
+  margin: 70px auto 0 auto; 
 }
 
 .imageContainer {
@@ -126,4 +126,23 @@ body {
   font-size: 32px;
 }
 
+.endGame {
+  display: none;
+  width: fit-content;
+  margin: 250px auto;
+}
+.endGame h2 {
+  font-size: 36px;
+  border: 4px solid red;
+  border-radius: 15px 15px 15px 0;
+  padding: 6px;
+  margin-bottom: 10px;
+}
+.endGame p {
+  font-size: 28px;
+  padding: 3px;
+  display: inline;
+  border: 3px solid #fff;
+  border-radius: 8px;
+}
 /* section started end */
